--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,12 @@
 		<module>server</module>
 		<module>service-feign</module>
 		<module>service-ribbon</module>
+		<module>service-zuul</module>
+		<module>config-server</module>
+		<module>eureka-server</module>
+		<module>config-client</module>
+		<module>service-zuul</module>
 	</modules>
-
 
 	<repositories>
 		<repository>
