--- a/service-ribbon/pom.xml
+++ b/service-ribbon/pom.xml
@@ -26,6 +26,11 @@
 	</properties>
 
 	<dependencies>
+		<!--hystrix 断路器起步依赖-->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-hystrix</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
